--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,8 @@
 name: arbify
-description: A new Flutter package project.
+description: >
+  Flutter package providing Arbify support.
 version: 0.0.1
-author:
-homepage:
+repository: https://github.com/Arbify/arbify_flutter
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
