--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: arbify
 description: >
   Flutter package providing Arbify support.
 version: 0.0.1
-repository: https://github.com/Arbify/arbify_flutter
+homepage: https://github.com/Arbify/arbify_flutter
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -14,6 +14,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  pedantic: ^1.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
