--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dev_dependencies:
     sdk: flutter
   args: ^1.6.0
   dio: ^3.0.9
+  mockito: ^4.1.1
   path: ^1.6.4
   pedantic: ^1.0.0
   yaml: ^2.2.1
