--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,18 +11,19 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-dev_dependencies:
-  flutter_test:
-    sdk: flutter
   args: ^1.6.0
   dio: ^3.0.9
   intl_translation: ^0.17.10
-  mockito: ^4.1.1
+  meta: ^1.1.8
   path: ^1.6.4
   pedantic: ^1.0.0
   petitparser: ^3.0.4
   yaml: ^2.2.1
+
+dev_dependencies:
+  flutter_test:
+    sdk: flutter
+  mockito: ^4.1.1
 
 executables:
   download:
