Fix petitparser version constraint to work with all branches

--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -35,5 +35,5 @@ jobs:
       - name: Download pub dependencies
         run: flutter pub get
 
-      - name: Run Flutter tests
-        run: flutter test
+      - name: Run tests
+        run: flutter pub run test
