--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,10 +17,9 @@ dependencies:
   meta: ^1.1.8
   path: ^1.6.4
   pedantic: ^1.0.0
-  petitparser: ^3.0.4
+  petitparser: '>=2.4.0 <4.0.0'
   yaml: ^2.2.1
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
+  test: ^1.14.7
   mockito: ^4.1.1
