Add analyzer to CI and fix its errors

--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -35,5 +35,8 @@ jobs:
       - name: Download pub dependencies
         run: flutter pub get
 
+      - name: Run analyzer
+        run: flutter analyze
+
       - name: Run tests
-        run: flutter pub run test
+        run: flutter pub test
