--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,4 +1,8 @@
-include: package:pedantic/analysis_options.yaml
+include: package:lint/analysis_options_package.yaml
 
 analyzer:
   exclude: [example]
+
+linter:
+  rules:
+    avoid_print: false
