--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,10 +16,10 @@ dependencies:
   intl_translation: ^0.17.9
   meta: ^1.1.8
   path: ^1.6.4
-  pedantic: ^1.0.0
   petitparser: '>=2.4.0 <4.0.0'
   yaml: ^2.2.1
 
 dev_dependencies:
-  test: ^1.14.7
   mockito: ^4.1.1
+  test: ^1.14.7
+  lint: ^1.2.0
