--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   meta: ^1.1.8
   path: ^1.6.4
   petitparser: '>=2.4.0 <4.0.0'
+  universal_io: ^1.0.1
   yaml: ^2.2.1
 
 dev_dependencies:
