--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -6,19 +6,20 @@ publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  intl: ^0.16.1
+  intl: ^0.17.0
 
 dev_dependencies:
+  arbify:
+    path: ../
   flutter_test:
     sdk: flutter
-  arbify: ^0.0.6
 
 flutter:
   uses-material-design: true
