--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,25 +2,26 @@ name: arbify
 description: >
   A package providing support for internationalizing
   Flutter applications using intl package with Arbify.
-version: 0.0.11
+version: 0.1.0
 homepage: https://github.com/Arbify/arbify_flutter
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
+  args: ^2.0.0
+  dio: ^4.0.0
   flutter:
     sdk: flutter
-  args: ^1.6.0
-  dio: ^3.0.9
-  intl_translation: ^0.17.9
-  meta: ^1.1.8
-  path: ^1.6.4
-  petitparser: '>=2.4.0 <4.0.0'
-  universal_io: ^1.0.1
-  yaml: ^2.2.1
+  intl: ^0.17.0
+  intl_utils: ^2.1.0
+  path: ^1.8.0
+  petitparser: ^4.0.2
+  universal_io: ^2.0.3
+  yaml: ^3.1.0
 
 dev_dependencies:
-  mockito: ^4.1.1
-  test: ^1.14.7
-  lint: ^1.2.0
+  build_runner: ^1.12.2
+  lint: ^1.5.3
+  mockito: ^5.0.3
+  test: ^1.16.8
